--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,265 +1,279 @@
-/* Keyframes */
-
-@keyframes blink-critical {
-	to {
-		/*color: @white;*/
-		background-color: @critical;
-	}
-}
-
-
-/* Styles */
-
-/* Colors (gruvbox) */
-@define-color black	#282828;
-@define-color red	#cc241d;
-@define-color green	#98971a;
-@define-color yellow	#d79921;
-@define-color blue	#458588;
-@define-color purple	#b16286;
-@define-color aqua	#689d6a;
-@define-color gray	#a89984;
-@define-color brgray	#928374;
-@define-color brred	#fb4934;
-@define-color brgreen	#b8bb26;
-@define-color bryellow	#fabd2f;
-@define-color brblue	#83a598;
-@define-color brpurple	#d3869b;
-@define-color braqua	#8ec07c;
-@define-color white	#ebdbb2;
-@define-color bg2	#504945;
-
-
-@define-color warning 	@bryellow;
-@define-color critical	@red;
-@define-color mode	@black;
-@define-color unfocused	@bg2;
-@define-color focused	@braqua;
-@define-color inactive	@purple;
-@define-color sound	@brpurple;
-@define-color network	@purple;
-@define-color memory	@braqua;
-@define-color cpu	@green;
-@define-color temp	@brgreen;
-@define-color layout	@bryellow;
-@define-color battery	@aqua;
-@define-color date	@black;
-@define-color time	@white;
-
-/* Reset all styles */
 * {
-	border: none;
-	border-radius: 0;
-	min-height: 0;
-	margin: 0;
-	padding: 0;
-	box-shadow: none;
-	text-shadow: none;
-	icon-shadow: none;
+    /* `otf-font-awesome` is required to be installed for icons */
+    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    color: #d8dee9;
 }
 
-/* The whole bar */
-#waybar {
-	background: rgba(40, 40, 40, 0.8784313725); /* #282828e0 */
-	color: @white;
-	font-family: JetBrains Mono, Siji;
-	font-size: 10pt;
-	/*font-weight: bold;*/
+window#waybar {
+    /*background-color: rgba(43, 48, 59, 0.5);*/
+    /*background-color: #eceff4;*/
+    background-color: rgba(46, 52, 64, 0.5);
+    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    transition-property: background-color;
+    transition-duration: .5s;
 }
 
-/* Each module */
-#battery,
+window#waybar.hidden {
+    opacity: 0.2;
+}
+
+/*
+window#waybar.empty {
+    background-color: transparent;
+}
+window#waybar.solo {
+    background-color: #FFFFFF;
+}
+*/
+
+button {
+    /* Use box-shadow instead of border so the text isn't offset */
+    box-shadow: inset 0 -3px transparent;
+    /* Avoid rounded borders under each button name */
+    border: none;
+    border-radius: 0;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+    background: inherit;
+    box-shadow: inset 0 -3px #ffffff;
+}
+
+#workspaces button {
+    padding: 0 5px;
+    background-color: transparent;
+}
+
+#workspaces button:hover {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#workspaces button.focused {
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ffffff;
+}
+
+#workspaces button.urgent {
+    background-color: #eb4d4b;
+}
+
+#mode {
+    background-color: #64727D;
+    border-bottom: 3px solid #ffffff;
+}
+
 #clock,
+#battery,
 #cpu,
-#language,
 #memory,
-#mode,
+#disk,
+#temperature,
+#backlight,
 #network,
 #pulseaudio,
-#temperature,
+#wireplumber,
+#custom-media,
 #tray,
-#backlight,
-#idle_inhibitor,
-#disk,
-#user,
-#mpris {
-	padding-left: 8pt;
-	padding-right: 8pt;
-}
-
-/* Each critical module */
 #mode,
-#memory.critical,
-#cpu.critical,
-#temperature.critical,
-#battery.critical.discharging {
-	animation-timing-function: linear;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-name: blink-critical;
-	animation-duration: 1s;
+#idle_inhibitor,
+#scratchpad,
+#mpd {
+    padding: 0 10px;
 }
 
-/* Each warning */
-#network.disconnected,
-#memory.warning,
-#cpu.warning,
-#temperature.warning,
-#battery.warning.discharging {
-	color: @warning;
+#window,
+#workspaces {
+    margin: 0 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+    background-color: rgba(76, 86, 106, 0.5);
 }
 
-/* And now modules themselves in their respective order */
-
-/* Current sway mode (resize etc) */
-#mode {
-	color: @white;
-	background: @mode;
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
 }
 
-/* Workspaces stuff */
-#workspaces button {
-	/*font-weight: bold;*/
-	padding-left: 2pt;
-	padding-right: 2pt;
-	color: @white;
-	background: @unfocused;
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
 }
 
-/* Inactive (on unfocused output) */
-#workspaces button.visible {
-	color: @white;
-	background: @inactive;
-}
-
-/* Active (on focused output) */
-#workspaces button.focused {
-	color: @black;
-	background: @focused;
-}
-
-/* Contains an urgent window */
-#workspaces button.urgent {
-	color: @black;
-	background: @warning;
-}
-
-/* Style when cursor is on the button */
-#workspaces button:hover {
-	background: @black;
-	color: @white;
-}
-
-#window {
-	margin-right: 35pt;
-	margin-left: 35pt;
-}
-
-#pulseaudio {
-	background: @sound;
-	color: @black;
-}
-
-#network {
-	background: @network;
-	color: @white;
-}
-
-#memory {
-	background: @memory;
-	color: @black;
-}
-
-#cpu {
-	background: @cpu;
-	color: @white;
-}
-
-#temperature {
-	background: @temp;
-	color: @black;
-}
-
-#language {
-	background: @layout;
-	color: @black;
+#clock {
+    background-color: rgba(180, 142, 173, 0.5);
+    background-color: rgba(76, 86, 106, 0.5);
 }
 
 #battery {
-	background: @battery;
-	color: @white;
+    background-color: #ffffff;
+}
+
+#battery.charging, #battery.plugged {
+    color: #ffffff;
+    background-color: #26A65B;
+}
+
+@keyframes blink {
+    to {
+        background-color: #ffffff;
+        color: #000000;
+    }
+}
+
+#battery.critical:not(.charging) {
+    background-color: #f53c3c;
+    color: #ffffff;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+label:focus {
+    background-color: #000000;
+}
+
+#cpu {
+    background-color: rgba(208, 135, 112, 0.5);
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#memory {
+    background-color: rgba(235, 203, 139, 0.5);
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#disk {
+    background-color: #964B00;
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#backlight {
+    background-color: #90b1b1;
+}
+
+#network {
+    background-color: rgba(235, 203, 139, 0.5);
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#network.disconnected {
+    background-color: #f53c3c;
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#pulseaudio {
+    background-color: #f1c40f;
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#pulseaudio.muted {
+    background-color: #90b1b1;
+    color: #2a5c45;
+}
+
+#wireplumber {
+    background-color: #fff0f5;
+    color: #000000;
+}
+
+#wireplumber.muted {
+    background-color: #f53c3c;
+}
+
+#custom-media {
+    background-color: #66cc99;
+    color: #2a5c45;
+    min-width: 100px;
+}
+
+#custom-media.custom-spotify {
+    background-color: #66cc99;
+}
+
+#custom-media.custom-vlc {
+    background-color: #ffa000;
+}
+
+#temperature {
+    background-color: rgba(163, 190, 140, 0.5);
+    background-color: rgba(76, 86, 106, 0.5);
+}
+
+#temperature.critical {
+    background-color: #eb4d4b;
 }
 
 #tray {
-	background: @date;
+    background-color: #2980b9;
 }
 
-#clock.date {
-	background: @date;
-	color: @white;
+#tray > .passive {
+    -gtk-icon-effect: dim;
 }
 
-#clock.time {
-	background: @time;
-	color: @black;
+#tray > .needs-attention {
+    -gtk-icon-effect: highlight;
+    background-color: #eb4d4b;
 }
 
-#custom-arrow1 {
-	font-size: 11pt;
-	color: @time;
-	background: @date;
+#idle_inhibitor {
+    background-color: #2d3436;
 }
 
-#custom-arrow2 {
-	font-size: 11pt;
-	color: @date;
-	background: @layout;
+#idle_inhibitor.activated {
+    background-color: #ecf0f1;
+    color: #2d3436;
 }
 
-#custom-arrow3 {
-	font-size: 11pt;
-	color: @layout;
-	background: @battery;
+#mpd {
+    background-color: #66cc99;
+    color: #2a5c45;
 }
 
-#custom-arrow4 {
-	font-size: 11pt;
-	color: @battery;
-	background: @temp;
+#mpd.disconnected {
+    background-color: #f53c3c;
 }
 
-#custom-arrow5 {
-	font-size: 11pt;
-	color: @temp;
-	background: @cpu;
+#mpd.stopped {
+    background-color: #90b1b1;
 }
 
-#custom-arrow6 {
-	font-size: 11pt;
-	color: @cpu;
-	background: @memory;
+#mpd.paused {
+    background-color: #51a37a;
 }
 
-#custom-arrow7 {
-	font-size: 11pt;
-	color: @memory;
-	background: @network;
+#language {
+    background: #00b093;
+    color: #740864;
+    padding: 0 5px;
+    margin: 0 5px;
+    min-width: 16px;
 }
 
-#custom-arrow8 {
-	font-size: 11pt;
-	color: @network;
-	background: @sound;
+#keyboard-state {
+    background: #97e1ad;
+    color: #000000;
+    padding: 0 0px;
+    margin: 0 5px;
+    min-width: 16px;
 }
 
-#custom-arrow9 {
-	font-size: 11pt;
-	color: @sound;
-	background: transparent;
+#keyboard-state > label {
+    padding: 0 5px;
 }
 
-#custom-arrow10 {
-	font-size: 11pt;
-	color: @unfocused;
-	background: transparent;
+#keyboard-state > label.locked {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad.empty {
+	background-color: transparent;
 }
