--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,67 +1,20 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    color: #d8dee9;
+    font-family: "SauceCodePro Nerd Font";
+    font-size: 14px;
+    color: #ddc7a1;
+		margin-top: 2px;
+		margin-left: 4px;
+		margin-right: 4px;
 }
 
 window#waybar {
-    /*background-color: rgba(43, 48, 59, 0.5);*/
-    /*background-color: #eceff4;*/
-    background-color: rgba(46, 52, 64, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    background: transparent;
     transition-property: background-color;
     transition-duration: .5s;
 }
 
 window#waybar.hidden {
     opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
-    border: none;
-    border-radius: 0;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
-}
-
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
 }
 
 #clock,
@@ -80,34 +33,16 @@ button:hover {
 #idle_inhibitor,
 #scratchpad,
 #mpd {
-    padding: 0 10px;
+    padding: 0 15px;
+		background-color: #3c3836;
+		border-radius: 2px;
 }
 
-#window,
-#workspaces {
+#window, #workspaces {
     margin: 0 4px;
-    padding-left: 4px;
-    padding-right: 4px;
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-#clock {
-    background-color: rgba(180, 142, 173, 0.5);
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-#battery {
-    background-color: #ffffff;
+    padding: 0 10px;
+    background-color: #3c3836;
+		border-radius: 2px;
 }
 
 #battery.charging, #battery.plugged {
@@ -136,40 +71,6 @@ label:focus {
     background-color: #000000;
 }
 
-#cpu {
-    background-color: rgba(208, 135, 112, 0.5);
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-#memory {
-    background-color: rgba(235, 203, 139, 0.5);
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-#disk {
-    background-color: #964B00;
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-#backlight {
-    background-color: #90b1b1;
-}
-
-#network {
-    background-color: rgba(235, 203, 139, 0.5);
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-#network.disconnected {
-    background-color: #f53c3c;
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
-#pulseaudio {
-    background-color: #f1c40f;
-    background-color: rgba(76, 86, 106, 0.5);
-}
-
 #pulseaudio.muted {
     background-color: #90b1b1;
     color: #2a5c45;
@@ -196,11 +97,6 @@ label:focus {
 
 #custom-media.custom-vlc {
     background-color: #ffa000;
-}
-
-#temperature {
-    background-color: rgba(163, 190, 140, 0.5);
-    background-color: rgba(76, 86, 106, 0.5);
 }
 
 #temperature.critical {
