--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,6 +7,15 @@
 		margin-right: 4px;
 }
 
+#workspaces button.active {
+	background-color: #504945;
+}
+
+#workspaces button {
+	margin: 0;
+	padding: 5px 10px;
+}
+
 window#waybar {
     background: transparent;
     transition-property: background-color;
@@ -35,14 +44,19 @@ window#waybar.hidden {
 #mpd {
     padding: 0 15px;
 		background-color: #3c3836;
-		border-radius: 2px;
+		border-radius: 5px;
 }
 
-#window, #workspaces {
+#window {
     margin: 0 4px;
     padding: 0 10px;
     background-color: #3c3836;
-		border-radius: 2px;
+		border-radius: 5px;
+}
+#workspaces {
+    /* margin: 0 4px; */
+    background-color: #3c3836;
+		border-radius: 5px;
 }
 
 #battery.charging, #battery.plugged {
